HW2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> class_decl program
Rule 2     program -> empty
Rule 3     class_decl -> CLASS ID EXTENDS ID LBRACE class_body_decls RBRACE
Rule 4     class_decl -> CLASS ID LBRACE class_body_decls RBRACE
Rule 5     class_body_decls -> class_body_decl class_body_decls
Rule 6     class_body_decls -> class_body_decl
Rule 7     class_body_decl -> field_decl
Rule 8     class_body_decl -> method_decl
Rule 9     class_body_decl -> constructor_decl
Rule 10    field_decl -> modifier var_decl
Rule 11    modifier -> PUBLIC STATIC
Rule 12    modifier -> PRIVATE STATIC
Rule 13    modifier -> PUBLIC
Rule 14    modifier -> PRIVATE
Rule 15    modifier -> STATIC
Rule 16    modifier -> empty
Rule 17    var_decl -> type variables SEMICOLON
Rule 18    type -> INT
Rule 19    type -> FLOAT
Rule 20    type -> BOOLEAN
Rule 21    type -> ID
Rule 22    variables -> variable
Rule 23    variables -> variable COMMA variables
Rule 24    variable -> ID
Rule 25    method_decl -> modifier type ID LPAREN formals RPAREN block
Rule 26    method_decl -> modifier VOID ID LPAREN formals RPAREN block
Rule 27    method_decl -> modifier type ID LPAREN RPAREN block
Rule 28    method_decl -> modifier VOID ID LPAREN RPAREN block
Rule 29    constructor_decl -> modifier ID LPAREN formals RPAREN block
Rule 30    constructor_decl -> modifier ID LPAREN RPAREN block
Rule 31    formals -> formal_param
Rule 32    formals -> formal_param COMMA formals
Rule 33    formal_param -> type variable
Rule 34    block -> LBRACE stmts RBRACE
Rule 35    stmts -> stmt stmts
Rule 36    stmts -> empty
Rule 37    stmt -> IF LPAREN expr RPAREN stmt ELSE stmt
Rule 38    stmt -> IF LPAREN expr RPAREN stmt
Rule 39    stmt -> WHILE LPAREN expr RPAREN stmt
Rule 40    stmt -> FOR LPAREN stmt_expr SEMICOLON expr SEMICOLON stmt_expr RPAREN stmt
Rule 41    stmt -> FOR LPAREN SEMICOLON expr SEMICOLON stmt_expr RPAREN stmt
Rule 42    stmt -> FOR LPAREN stmt_expr SEMICOLON SEMICOLON stmt_expr RPAREN stmt
Rule 43    stmt -> FOR LPAREN stmt_expr SEMICOLON expr SEMICOLON RPAREN stmt
Rule 44    stmt -> FOR LPAREN stmt_expr SEMICOLON SEMICOLON RPAREN stmt
Rule 45    stmt -> FOR LPAREN SEMICOLON expr SEMICOLON RPAREN stmt
Rule 46    stmt -> FOR LPAREN SEMICOLON SEMICOLON stmt_expr RPAREN stmt
Rule 47    stmt -> FOR LPAREN SEMICOLON SEMICOLON RPAREN stmt
Rule 48    stmt -> RETURN expr SEMICOLON
Rule 49    stmt -> RETURN SEMICOLON
Rule 50    stmt -> stmt_expr SEMICOLON
Rule 51    stmt -> BREAK SEMICOLON
Rule 52    stmt -> CONTINUE SEMICOLON
Rule 53    stmt -> block
Rule 54    stmt -> var_decl
Rule 55    stmt -> SEMICOLON
Rule 56    literal -> INTCONST
Rule 57    literal -> FLOATCONST
Rule 58    literal -> STRINGCONST
Rule 59    literal -> NULL
Rule 60    literal -> TRUE
Rule 61    literal -> FALSE
Rule 62    primary -> literal
Rule 63    primary -> THIS
Rule 64    primary -> SUPER
Rule 65    primary -> LPAREN expr RPAREN
Rule 66    primary -> NEW ID LPAREN arguments RPAREN
Rule 67    primary -> NEW ID LPAREN RPAREN
Rule 68    primary -> lhs
Rule 69    primary -> method_invocation
Rule 70    arguments -> expr
Rule 71    arguments -> expr COMMA arguments
Rule 72    lhs -> field_access
Rule 73    field_access -> primary DOT ID
Rule 74    field_access -> ID
Rule 75    method_invocation -> field_access LPAREN arguments RPAREN
Rule 76    method_invocation -> field_access LPAREN RPAREN
Rule 77    expr -> primary
Rule 78    expr -> assign
Rule 79    expr -> expr PLUS expr
Rule 80    expr -> expr MINUS expr
Rule 81    expr -> expr MULT expr
Rule 82    expr -> expr DIV expr
Rule 83    expr -> expr AND expr
Rule 84    expr -> expr OR expr
Rule 85    expr -> expr EQUALEQUAL expr
Rule 86    expr -> expr NOTEQUAL expr
Rule 87    expr -> expr LESS expr
Rule 88    expr -> expr GREATER expr
Rule 89    expr -> expr LESSEQUAL expr
Rule 90    expr -> expr GREATEREQUAL expr
Rule 91    expr -> MINUS expr
Rule 92    expr -> PLUS expr
Rule 93    expr -> NOT expr
Rule 94    assign -> lhs EQUAL expr
Rule 95    assign -> lhs PLUSPLUS
Rule 96    assign -> PLUSPLUS lhs
Rule 97    assign -> lhs MINUSMINUS
Rule 98    assign -> MINUSMINUS lhs
Rule 99    stmt_expr -> assign
Rule 100   stmt_expr -> method_invocation
Rule 101   empty -> <empty>

Terminals, with rules where they appear

AND                  : 83
BOOLEAN              : 20
BREAK                : 51
CLASS                : 3 4
COMMA                : 23 32 71
CONTINUE             : 52
DIV                  : 82
DOT                  : 73
ELSE                 : 37
EQUAL                : 94
EQUALEQUAL           : 85
EXTENDS              : 3
FALSE                : 61
FLOAT                : 19
FLOATCONST           : 57
FOR                  : 40 41 42 43 44 45 46 47
GREATER              : 88
GREATEREQUAL         : 90
ID                   : 3 3 4 21 24 25 26 27 28 29 30 66 67 73 74
IF                   : 37 38
INT                  : 18
INTCONST             : 56
LBRACE               : 3 4 34
LESS                 : 87
LESSEQUAL            : 89
LPAREN               : 25 26 27 28 29 30 37 38 39 40 41 42 43 44 45 46 47 65 66 67 75 76
MINUS                : 80 91
MINUSMINUS           : 97 98
MULT                 : 81
NEW                  : 66 67
NOT                  : 93
NOTEQUAL             : 86
NULL                 : 59
OR                   : 84
PLUS                 : 79 92
PLUSPLUS             : 95 96
PRIVATE              : 12 14
PUBLIC               : 11 13
RBRACE               : 3 4 34
RETURN               : 48 49
RPAREN               : 25 26 27 28 29 30 37 38 39 40 41 42 43 44 45 46 47 65 66 67 75 76
SEMICOLON            : 17 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 49 50 51 52 55
STATIC               : 11 12 15
STRINGCONST          : 58
SUPER                : 64
THIS                 : 63
TRUE                 : 60
VOID                 : 26 28
WHILE                : 39
error                : 

Nonterminals, with rules where they appear

arguments            : 66 71 75
assign               : 78 99
block                : 25 26 27 28 29 30 53
class_body_decl      : 5 6
class_body_decls     : 3 4 5
class_decl           : 1
constructor_decl     : 9
empty                : 2 16 36
expr                 : 37 38 39 40 41 43 45 48 65 70 71 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 89 90 90 91 92 93 94
field_access         : 72 75 76
field_decl           : 7
formal_param         : 31 32
formals              : 25 26 29 32
lhs                  : 68 94 95 96 97 98
literal              : 62
method_decl          : 8
method_invocation    : 69 100
modifier             : 10 25 26 27 28 29 30
primary              : 73 77
program              : 1 0
stmt                 : 35 37 37 38 39 40 41 42 43 44 45 46 47
stmt_expr            : 40 40 41 42 42 43 44 46 50
stmts                : 34 35
type                 : 17 25 27 33
var_decl             : 10 54
variable             : 22 23 33
variables            : 17 23

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_decl program
    (2) program -> . empty
    (3) class_decl -> . CLASS ID EXTENDS ID LBRACE class_body_decls RBRACE
    (4) class_decl -> . CLASS ID LBRACE class_body_decls RBRACE
    (101) empty -> .

    CLASS           shift and go to state 4
    $end            reduce using rule 101 (empty -> .)

    program                        shift and go to state 1
    class_decl                     shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> program .



state 2

    (1) program -> class_decl . program
    (1) program -> . class_decl program
    (2) program -> . empty
    (3) class_decl -> . CLASS ID EXTENDS ID LBRACE class_body_decls RBRACE
    (4) class_decl -> . CLASS ID LBRACE class_body_decls RBRACE
    (101) empty -> .

    CLASS           shift and go to state 4
    $end            reduce using rule 101 (empty -> .)

    class_decl                     shift and go to state 2
    program                        shift and go to state 5
    empty                          shift and go to state 3

state 3

    (2) program -> empty .

    $end            reduce using rule 2 (program -> empty .)


state 4

    (3) class_decl -> CLASS . ID EXTENDS ID LBRACE class_body_decls RBRACE
    (4) class_decl -> CLASS . ID LBRACE class_body_decls RBRACE

    ID              shift and go to state 6


state 5

    (1) program -> class_decl program .

    $end            reduce using rule 1 (program -> class_decl program .)


state 6

    (3) class_decl -> CLASS ID . EXTENDS ID LBRACE class_body_decls RBRACE
    (4) class_decl -> CLASS ID . LBRACE class_body_decls RBRACE

    EXTENDS         shift and go to state 7
    LBRACE          shift and go to state 8


state 7

    (3) class_decl -> CLASS ID EXTENDS . ID LBRACE class_body_decls RBRACE

    ID              shift and go to state 9


state 8

    (4) class_decl -> CLASS ID LBRACE . class_body_decls RBRACE
    (5) class_body_decls -> . class_body_decl class_body_decls
    (6) class_body_decls -> . class_body_decl
    (7) class_body_decl -> . field_decl
    (8) class_body_decl -> . method_decl
    (9) class_body_decl -> . constructor_decl
    (10) field_decl -> . modifier var_decl
    (25) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (26) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (27) method_decl -> . modifier type ID LPAREN RPAREN block
    (28) method_decl -> . modifier VOID ID LPAREN RPAREN block
    (29) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (30) constructor_decl -> . modifier ID LPAREN RPAREN block
    (11) modifier -> . PUBLIC STATIC
    (12) modifier -> . PRIVATE STATIC
    (13) modifier -> . PUBLIC
    (14) modifier -> . PRIVATE
    (15) modifier -> . STATIC
    (16) modifier -> . empty
    (101) empty -> .

    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 18
    STATIC          shift and go to state 17
    VOID            reduce using rule 101 (empty -> .)
    ID              reduce using rule 101 (empty -> .)
    INT             reduce using rule 101 (empty -> .)
    FLOAT           reduce using rule 101 (empty -> .)
    BOOLEAN         reduce using rule 101 (empty -> .)

    class_body_decls               shift and go to state 10
    class_body_decl                shift and go to state 11
    field_decl                     shift and go to state 12
    method_decl                    shift and go to state 13
    constructor_decl               shift and go to state 14
    modifier                       shift and go to state 15
    empty                          shift and go to state 19

state 9

    (3) class_decl -> CLASS ID EXTENDS ID . LBRACE class_body_decls RBRACE

    LBRACE          shift and go to state 20


state 10

    (4) class_decl -> CLASS ID LBRACE class_body_decls . RBRACE

    RBRACE          shift and go to state 21


state 11

    (5) class_body_decls -> class_body_decl . class_body_decls
    (6) class_body_decls -> class_body_decl .
    (5) class_body_decls -> . class_body_decl class_body_decls
    (6) class_body_decls -> . class_body_decl
    (7) class_body_decl -> . field_decl
    (8) class_body_decl -> . method_decl
    (9) class_body_decl -> . constructor_decl
    (10) field_decl -> . modifier var_decl
    (25) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (26) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (27) method_decl -> . modifier type ID LPAREN RPAREN block
    (28) method_decl -> . modifier VOID ID LPAREN RPAREN block
    (29) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (30) constructor_decl -> . modifier ID LPAREN RPAREN block
    (11) modifier -> . PUBLIC STATIC
    (12) modifier -> . PRIVATE STATIC
    (13) modifier -> . PUBLIC
    (14) modifier -> . PRIVATE
    (15) modifier -> . STATIC
    (16) modifier -> . empty
    (101) empty -> .

    RBRACE          reduce using rule 6 (class_body_decls -> class_body_decl .)
    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 18
    STATIC          shift and go to state 17
    VOID            reduce using rule 101 (empty -> .)
    ID              reduce using rule 101 (empty -> .)
    INT             reduce using rule 101 (empty -> .)
    FLOAT           reduce using rule 101 (empty -> .)
    BOOLEAN         reduce using rule 101 (empty -> .)

    class_body_decl                shift and go to state 11
    class_body_decls               shift and go to state 22
    field_decl                     shift and go to state 12
    method_decl                    shift and go to state 13
    constructor_decl               shift and go to state 14
    modifier                       shift and go to state 15
    empty                          shift and go to state 19

state 12

    (7) class_body_decl -> field_decl .

    PUBLIC          reduce using rule 7 (class_body_decl -> field_decl .)
    PRIVATE         reduce using rule 7 (class_body_decl -> field_decl .)
    STATIC          reduce using rule 7 (class_body_decl -> field_decl .)
    VOID            reduce using rule 7 (class_body_decl -> field_decl .)
    ID              reduce using rule 7 (class_body_decl -> field_decl .)
    INT             reduce using rule 7 (class_body_decl -> field_decl .)
    FLOAT           reduce using rule 7 (class_body_decl -> field_decl .)
    BOOLEAN         reduce using rule 7 (class_body_decl -> field_decl .)
    RBRACE          reduce using rule 7 (class_body_decl -> field_decl .)


state 13

    (8) class_body_decl -> method_decl .

    PUBLIC          reduce using rule 8 (class_body_decl -> method_decl .)
    PRIVATE         reduce using rule 8 (class_body_decl -> method_decl .)
    STATIC          reduce using rule 8 (class_body_decl -> method_decl .)
    VOID            reduce using rule 8 (class_body_decl -> method_decl .)
    ID              reduce using rule 8 (class_body_decl -> method_decl .)
    INT             reduce using rule 8 (class_body_decl -> method_decl .)
    FLOAT           reduce using rule 8 (class_body_decl -> method_decl .)
    BOOLEAN         reduce using rule 8 (class_body_decl -> method_decl .)
    RBRACE          reduce using rule 8 (class_body_decl -> method_decl .)


state 14

    (9) class_body_decl -> constructor_decl .

    PUBLIC          reduce using rule 9 (class_body_decl -> constructor_decl .)
    PRIVATE         reduce using rule 9 (class_body_decl -> constructor_decl .)
    STATIC          reduce using rule 9 (class_body_decl -> constructor_decl .)
    VOID            reduce using rule 9 (class_body_decl -> constructor_decl .)
    ID              reduce using rule 9 (class_body_decl -> constructor_decl .)
    INT             reduce using rule 9 (class_body_decl -> constructor_decl .)
    FLOAT           reduce using rule 9 (class_body_decl -> constructor_decl .)
    BOOLEAN         reduce using rule 9 (class_body_decl -> constructor_decl .)
    RBRACE          reduce using rule 9 (class_body_decl -> constructor_decl .)


state 15

    (10) field_decl -> modifier . var_decl
    (25) method_decl -> modifier . type ID LPAREN formals RPAREN block
    (26) method_decl -> modifier . VOID ID LPAREN formals RPAREN block
    (27) method_decl -> modifier . type ID LPAREN RPAREN block
    (28) method_decl -> modifier . VOID ID LPAREN RPAREN block
    (29) constructor_decl -> modifier . ID LPAREN formals RPAREN block
    (30) constructor_decl -> modifier . ID LPAREN RPAREN block
    (17) var_decl -> . type variables SEMICOLON
    (18) type -> . INT
    (19) type -> . FLOAT
    (20) type -> . BOOLEAN
    (21) type -> . ID

    VOID            shift and go to state 26
    ID              shift and go to state 25
    INT             shift and go to state 27
    FLOAT           shift and go to state 28
    BOOLEAN         shift and go to state 29

    var_decl                       shift and go to state 23
    type                           shift and go to state 24

state 16

    (11) modifier -> PUBLIC . STATIC
    (13) modifier -> PUBLIC .

    STATIC          shift and go to state 30
    VOID            reduce using rule 13 (modifier -> PUBLIC .)
    ID              reduce using rule 13 (modifier -> PUBLIC .)
    INT             reduce using rule 13 (modifier -> PUBLIC .)
    FLOAT           reduce using rule 13 (modifier -> PUBLIC .)
    BOOLEAN         reduce using rule 13 (modifier -> PUBLIC .)


state 17

    (15) modifier -> STATIC .

    VOID            reduce using rule 15 (modifier -> STATIC .)
    ID              reduce using rule 15 (modifier -> STATIC .)
    INT             reduce using rule 15 (modifier -> STATIC .)
    FLOAT           reduce using rule 15 (modifier -> STATIC .)
    BOOLEAN         reduce using rule 15 (modifier -> STATIC .)


state 18

    (12) modifier -> PRIVATE . STATIC
    (14) modifier -> PRIVATE .

    STATIC          shift and go to state 31
    VOID            reduce using rule 14 (modifier -> PRIVATE .)
    ID              reduce using rule 14 (modifier -> PRIVATE .)
    INT             reduce using rule 14 (modifier -> PRIVATE .)
    FLOAT           reduce using rule 14 (modifier -> PRIVATE .)
    BOOLEAN         reduce using rule 14 (modifier -> PRIVATE .)


state 19

    (16) modifier -> empty .

    VOID            reduce using rule 16 (modifier -> empty .)
    ID              reduce using rule 16 (modifier -> empty .)
    INT             reduce using rule 16 (modifier -> empty .)
    FLOAT           reduce using rule 16 (modifier -> empty .)
    BOOLEAN         reduce using rule 16 (modifier -> empty .)


state 20

    (3) class_decl -> CLASS ID EXTENDS ID LBRACE . class_body_decls RBRACE
    (5) class_body_decls -> . class_body_decl class_body_decls
    (6) class_body_decls -> . class_body_decl
    (7) class_body_decl -> . field_decl
    (8) class_body_decl -> . method_decl
    (9) class_body_decl -> . constructor_decl
    (10) field_decl -> . modifier var_decl
    (25) method_decl -> . modifier type ID LPAREN formals RPAREN block
    (26) method_decl -> . modifier VOID ID LPAREN formals RPAREN block
    (27) method_decl -> . modifier type ID LPAREN RPAREN block
    (28) method_decl -> . modifier VOID ID LPAREN RPAREN block
    (29) constructor_decl -> . modifier ID LPAREN formals RPAREN block
    (30) constructor_decl -> . modifier ID LPAREN RPAREN block
    (11) modifier -> . PUBLIC STATIC
    (12) modifier -> . PRIVATE STATIC
    (13) modifier -> . PUBLIC
    (14) modifier -> . PRIVATE
    (15) modifier -> . STATIC
    (16) modifier -> . empty
    (101) empty -> .

    PUBLIC          shift and go to state 16
    PRIVATE         shift and go to state 18
    STATIC          shift and go to state 17
    VOID            reduce using rule 101 (empty -> .)
    ID              reduce using rule 101 (empty -> .)
    INT             reduce using rule 101 (empty -> .)
    FLOAT           reduce using rule 101 (empty -> .)
    BOOLEAN         reduce using rule 101 (empty -> .)

    class_body_decls               shift and go to state 32
    class_body_decl                shift and go to state 11
    field_decl                     shift and go to state 12
    method_decl                    shift and go to state 13
    constructor_decl               shift and go to state 14
    modifier                       shift and go to state 15
    empty                          shift and go to state 19

state 21

    (4) class_decl -> CLASS ID LBRACE class_body_decls RBRACE .

    CLASS           reduce using rule 4 (class_decl -> CLASS ID LBRACE class_body_decls RBRACE .)
    $end            reduce using rule 4 (class_decl -> CLASS ID LBRACE class_body_decls RBRACE .)


state 22

    (5) class_body_decls -> class_body_decl class_body_decls .

    RBRACE          reduce using rule 5 (class_body_decls -> class_body_decl class_body_decls .)


state 23

    (10) field_decl -> modifier var_decl .

    PUBLIC          reduce using rule 10 (field_decl -> modifier var_decl .)
    PRIVATE         reduce using rule 10 (field_decl -> modifier var_decl .)
    STATIC          reduce using rule 10 (field_decl -> modifier var_decl .)
    VOID            reduce using rule 10 (field_decl -> modifier var_decl .)
    ID              reduce using rule 10 (field_decl -> modifier var_decl .)
    INT             reduce using rule 10 (field_decl -> modifier var_decl .)
    FLOAT           reduce using rule 10 (field_decl -> modifier var_decl .)
    BOOLEAN         reduce using rule 10 (field_decl -> modifier var_decl .)
    RBRACE          reduce using rule 10 (field_decl -> modifier var_decl .)


state 24

    (25) method_decl -> modifier type . ID LPAREN formals RPAREN block
    (27) method_decl -> modifier type . ID LPAREN RPAREN block
    (17) var_decl -> type . variables SEMICOLON
    (22) variables -> . variable
    (23) variables -> . variable COMMA variables
    (24) variable -> . ID

    ID              shift and go to state 33

    variables                      shift and go to state 34
    variable                       shift and go to state 35

state 25

    (29) constructor_decl -> modifier ID . LPAREN formals RPAREN block
    (30) constructor_decl -> modifier ID . LPAREN RPAREN block
    (21) type -> ID .

    LPAREN          shift and go to state 36
    ID              reduce using rule 21 (type -> ID .)


state 26

    (26) method_decl -> modifier VOID . ID LPAREN formals RPAREN block
    (28) method_decl -> modifier VOID . ID LPAREN RPAREN block

    ID              shift and go to state 37


state 27

    (18) type -> INT .

    ID              reduce using rule 18 (type -> INT .)


state 28

    (19) type -> FLOAT .

    ID              reduce using rule 19 (type -> FLOAT .)


state 29

    (20) type -> BOOLEAN .

    ID              reduce using rule 20 (type -> BOOLEAN .)


state 30

    (11) modifier -> PUBLIC STATIC .

    VOID            reduce using rule 11 (modifier -> PUBLIC STATIC .)
    ID              reduce using rule 11 (modifier -> PUBLIC STATIC .)
    INT             reduce using rule 11 (modifier -> PUBLIC STATIC .)
    FLOAT           reduce using rule 11 (modifier -> PUBLIC STATIC .)
    BOOLEAN         reduce using rule 11 (modifier -> PUBLIC STATIC .)


state 31

    (12) modifier -> PRIVATE STATIC .
